[metadata]
name = cosmic-route-planner
version = 1.0
author = Gunasekar Jabbala
author_email = gunasekar.ai.dev@gmail.com
description = A small example package for Route Planner project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jabbala/cosmic-route-planner
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt
